--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.Sf298:Sauds-Toolbox:master'
+    compile 'com.github.Sf298:Sauds-Toolbox:master-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
