--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.Sf298:Sauds-Toolbox:master-SNAPSHOT'
+    compile 'com.github.Sf298:Sauds-Toolbox:a9ade71a652f0bd2bc0bf63bbee09d797e0fd2a1'
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
