--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ repositories {
 
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-    implementation 'com.github.Sf298:Sauds-Toolbox:7051109848be1e5bb0703d3943ae865e5199bf8b'
+    implementation group: 'com.github.Sf298', name: 'Sauds-Toolbox', version: '7051109848be1e5bb0703d3943ae865e5199bf8b'
     testImplementation group: 'junit', name: 'junit', version: '4.10'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.1'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
 }
